--- a/depoimentos.html
+++ b/depoimentos.html
@@ -23,13 +23,14 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/fontawesome.css"
 	integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 	
-	<link href="css/style.css" rel="stylesheet">
 	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="scripts/env.js"> </script>
 	<script src="scripts/script.js"> </script>
-	<script src="scripts/carregadepoimentos.js"> </script>
+	<script src="scripts/carregadepoimentos.js"> </script>	
+	<link href="css/style.css" rel="stylesheet">
+
 
 
 	<title>ISY</title>
@@ -39,7 +40,7 @@
 <body onload="carregaDepoimentos(), iniciaAplicacao()">
 	<div class="titulo">
 		<p> ISY - I support you </p>
-		<span id="nome"></span>
+		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
