Ajuste de imagens

--- a/mulheres.html
+++ b/mulheres.html
@@ -118,7 +118,9 @@ A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 				<div class="card mb-3 img-thumbnail">
 					<div class="row g-0">
 						<div class="col-md-5">
-							<a target="_blank" href="https://www.sosmulher.sp.gov.br/index.aspx"><img src="img/sosmulher.jpg" class="imgs" alt="SOS Mulher"></a>
+							<a target="_blank" href="https://www.sosmulher.sp.gov.br/index.aspx">
+								<img class="img-fluid imsg" src="img/sosmulher.jpg" alt="SOS Mulher">
+							</a>
 						</div>
 						<div class="col-md-7">
 							<div class="card-body">
@@ -142,14 +144,18 @@ A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 						</div>
 					</div>
 					<div class="col-md-5">
-						<a target="_blank" href="https://associacaofalamulher.wixsite.com/associacaofalamulher"><img src="img/falamulher.jpg" class="imgs" alt="Associação Fala Mulher"></a>
+						<a target="_blank" href="https://associacaofalamulher.wixsite.com/associacaofalamulher">
+							<img class="img-fluid imgs" src="img/falamulher.jpg" alt="Associação Fala Mulher">
+						</a>
 					</div>
 				</div>
 			</div>
 			<div class="card mb-3 img-thumbnail">
 				<div class="row g-0">
 					<div class="col-md-5">			
-						<a target="_blank" href="https://casadeisabel.org.br/"><img src="img/casadeisabel.jpg" class="imgs" alt="Casa de Isabel"></a>
+						<a target="_blank" href="https://casadeisabel.org.br/">
+							<img src="img/casadeisabel.jpg" class="img-fluid imgs" alt="Casa de Isabel">
+						</a>
 					</div>
 					<div class="col-md-7">
 						<div class="card-body">
@@ -169,7 +175,9 @@ A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 						</div>
 					</div>
 					<div class="col-md-5">
-						<a target="_blank" href="https://www.mapadoacolhimento.org/"><img src="img/mapadoacolhimento.jpg" class="imgs" alt=" Mapa do Acolhimento"></a>
+						<a target="_blank" href="https://www.mapadoacolhimento.org/">
+							<img class="img-fluid imsg" src="img/mapadoacolhimento.jpg" alt=" Mapa do Acolhimento">
+						</a>
 					</div>
 				</div>
 			</div>
@@ -184,27 +192,12 @@ A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 						</div>
 					</div>
 					<div class="col-md-5">
-						<a target="_blank" href="https://www.meteacolher.org/"><img src="img/meteacolher.jfif" class="imgs" alt="Mete a Colher">
+						<a target="_blank" href="https://www.meteacolher.org/">
+							<img class="img-fluid imsg" src="img/meteacolher.jfif" alt="Mete a Colher"/>
+							</a>
 					</div>
 				</div>
 			</div>
-
-			
-			
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 		</div>	
 	</div>
 
