--- a/mulheres.html
+++ b/mulheres.html
@@ -5,16 +5,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
+	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin="anonymous"></script>
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
 
 
 	<link href="css/style.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
-		<a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
+		<a class="navbar-brand" href="index.html"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -74,7 +74,8 @@
 	</div>
 </nav>
 <h3 class="texto_padrao"> O Decreto-Lei nº 10.224, de 15 de maio de 2001, acrescenta o artigo nº 216-A ao Código Penal Brasileiro, apresenta o seguinte texto: "Constranger alguém com o intuito de obter vantagem ou favorecimento sexual, prevalecendo-se o agente da sua condição de superior hierárquico ou ascendência inerentes ao exercício de emprego, cargo ou função."
-A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
+	A pena a ser cumprida por quem comete tal crime pode variar de 1 a 2 anos.
+</h3>
 <br>
 <a href ="https://event.webinarjam.com/register/8/vlg9pco">
 	<img src="img/wm.jpg" id="imgm"></a>
@@ -91,7 +92,7 @@ A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 		<br><br>
 		O <mark>assédio moral</mark> se trata da humilhação sofrida pela vítima afetando sua dignidade, é bem comum do ambiente de trabalho em situações que consiste na humilhação de um funcionário por exemplo, que é exposto por seus patrões ou até mesmo por outros funcionários. Não existe lei específica no Brasil que ampare este tipo de assédio, mas em alguns casos, podem ser classificados como crime de danos morais.
 		<br><br>
-		O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de um ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime.</br>
+		O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de uma ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime.</br>
 		<a href ="https://www.etsy.com/listing/826902687/diverse-women-portrait-different-skin?epik=dj0yJnU9cE9yYzNYcWJIanZpOVZlUjE0QTN4enNsVVQyM1Z6Q18mcD0wJm49eXlZZG51VUdORjcxc0thV3pJMWRRQSZ0PUFBQUFBR0NBZUUw">
 			<img src="img/mulheres.jpg" id="imgm"></a>
 			
@@ -194,7 +195,7 @@ A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 					<div class="col-md-5">
 						<a target="_blank" href="https://www.meteacolher.org/">
 							<img class="img-fluid imsg" src="img/meteacolher.jfif" alt="Mete a Colher"/>
-							</a>
+						</a>
 					</div>
 				</div>
 			</div>
