--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
     <spam id="nome"></spam>
   </div>
   <nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
-    <a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
+    <a class="navbar-brand" href="index.html"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
