--- a/sobre.html
+++ b/sobre.html
@@ -5,16 +5,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
+	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin="anonymous"></script>
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
 
 
 	<link href="css/style.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light">
-		<a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
+		<a class="navbar-brand" href="index.html"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -87,7 +87,8 @@
 	</a>
 
 	<br>
-	<h3 class="texto_padrao"> O nosso site será usado como uma ferramenta a mais que vem para somar com projetos como o <a class= "link" href = "depoimentos.html">Mete a colher</a> ou até mesmo o papel desempenhado pela delegacia da mulher, para ser mais uma plataforma de colaboração na denúncia e no diálogo entre mulheres que enfrentam essas situações em diversos lugares e buscam um meio para relatar sobre o ocorrido e buscar ajuda psicológica e judiciária, que será disponibilizada na nossa plataforma profissionais destes ramos que se propuseram a participar desta iniciativa.
+	<h3 class="texto_padrao"> O nosso site será usado como uma ferramenta a mais que vem para somar com projetos como o <a class= "link" href = "https://www.meteacolher.org/">Mete a colher</a> ou até mesmo o papel desempenhado pela delegacia da mulher, para ser mais uma plataforma de colaboração no diálogo entre mulheres que enfrentam essas situações em diversos lugares e buscam um meio para relatar sobre o ocorrido.
+
 		<br>
 		Nos baseamos em pesquisas realizadas com mulheres para validar a importância  de um ambiente adequado para relatarem suas experiências e seu convívio  social da forma mais segura e privada, e com base nas respostas adquiridas construímos nosso site. 
 	</h3>
